--- a/post.html
+++ b/post.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uploaded Text</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    {{ highlighted_text|safe }}
 </head>
 <body>
-    <h1>Uploaded Text</h1>
-    <pre>{{ text }}</pre>
+    <div class="container mt-5">
+        <h1>Uploaded Text</h1>
+        <pre class="border p-3">{{ post.content }}</pre>
+    </div>
 </body>
 </html>
